-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.9.0
-
None
-
-
f696d1e6cf (qt-creator/qt-creator/master) f696d1e6cf (qt-creator/qt-creator/qds/dev)
So I had opened git diff of current file in separated window.
Then I was editing file in editor + refreshing git diff (button there) + reverting some....when I started compile - i got error - some my just edits were missing.
I think what happened, when I refreshed git diff window it rolled back editor window to last saved, effectively canceling all last not saved edits silently.
(I have auto-save before compile enabled, so rare do it manually).
So basically I'm not sure if partial revert or reload of git window canceled my edits, but that should not happen any way. Current not saved edits must stay until explicit canceled or show big warning about possibly loss and ask to save.
Or just better - if any action - just autosave. Since I have "autosave" enabled + it is git, so always can rollback.
For Gerrit Dashboard: QTCREATORBUG-22506 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
438467,2 | DiffEditor/VCS: Save document before applying/reverting patch chunk | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |