src/plugins/coreplugin/patchtool.h
@@ -20,7 +20,7 @@ public:
     static Utils::FilePath patchCommand();
     static void setPatchCommand(const Utils::FilePath &newCommand);
 
-    static bool confirmPatching(QWidget *parent, PatchAction patchAction);
+    static bool confirmPatching(QWidget *parent, PatchAction patchAction, bool isModified);
 
     // Utility to run the 'patch' command
     static bool runPatch(const QByteArray &input, const Utils::FilePath &workingDirectory = {},
